Promjena registracija liftova, promjena komunikacija (goToFloor i freeBusyElevator)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(Liftovi LANGUAGES CXX)
+project(Elevators LANGUAGES CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -22,20 +22,24 @@ set(INCLUDES include/Button.h
              include/FloorButton.h
              include/LocalController.h
              include/ClientComModule.h
-             include/Elevator.h)
+             include/Elevator.h
+             include/ServerController.h
+             include/ServerComModule.h)
 
 set(SOURCES src/Button.cpp
             src/CallButton.cpp
             src/FloorButton.cpp
             src/LocalController.cpp
             src/ClientComModule.cpp
-            src/Elevator.cpp)
+            src/Elevator.cpp
+            src/ServerController.cpp
+            src/ServerComModule.cpp)
 
-add_executable(Liftovi
+add_executable(Elevators
   src/main.cpp
   ${INCLUDES}
   ${SOURCES}
   resources/qml.qrc
 )
 
-target_link_libraries(Liftovi rpc Qt5::Gui Qt5::Quick)
+target_link_libraries(Elevators rpc Qt5::Gui Qt5::Quick)
